# erp-ultra

./: .gitignore  ARCHITECTURE.md  README.md  alembic.ini  get_issue.py  get_issue_full.py  issue.txt  issue12.md  issue40.md  issue_31.md  issue_50.txt  issue_56.md  issue_6.md  issue_body.txt  issue_details.txt  issue_full.txt  mypy.ini  plan.md  pyproject.toml
alembic/: env.py
shared/: __init__.py  errors.py  interfaces.py  schema.py  types.py
src/domain/_016_customer_model/: __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_017_product_model/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_023_address/: __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_024_contact/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_025_document_number/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_026_unit_of_measure/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_027_warehouse_model/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_028_pricing/: __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_029_payment_terms/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
src/domain/_030_attachment/: README.md  __init__.py  models.py  router.py  schemas.py  service.py  validators.py
(+469 files in other folders)
